WIP: Fixed code style errors, still need to make sure there is enough unit tests and fix the two that are failing because they're incorrect. Need to add Documentation.